other-cel/restrict-storageclass/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-storageclass
policies:
- ../restrict-storageclass.yaml
resources:
- resource.yaml
results:
- kind: StorageClass
  policy: restrict-storageclass
  resources:
  - badstorageclass
  result: fail
  rule: storageclass-delete
- kind: StorageClass
  policy: restrict-storageclass
  resources:
  - goodstorageclass
  result: pass
  rule: storageclass-delete
